--- a/public/assets/stylelayout.css
+++ b/public/assets/stylelayout.css
@@ -2,8 +2,13 @@
     width: 100%;
 }
 
+.header {
+    height: 15%;
+}
+
 .container {
     width: 60%;
     margin-left: 200px;
     margin-right: 200px;
+    padding: auto;
 }
