--- a/public/assets/stylelayout.css
+++ b/public/assets/stylelayout.css
@@ -23,8 +23,8 @@
     padding: 20px;
     background-color: #FF00FF;
     border-radius: 5px;
-
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
+    margin: 10px;
   }
