--- a/public/assets/stylelayout.css
+++ b/public/assets/stylelayout.css
@@ -25,7 +25,7 @@
     padding: 20px;
     background-color: #FF00FF;
     border-radius: 5px;
-    display: grid;
+    display: inline-block;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     margin: 10px;
