--- a/public/assets/stylelayout.css
+++ b/public/assets/stylelayout.css
@@ -8,10 +8,7 @@
 
 .container {
     width: 100%;
-    margin-left: 200px;
-    margin-right: 200px;
-    margin-bottom: 50px;
-    padding: auto;
+    margin: 200px 50px 200px 50px;
 }
 
 .article {
@@ -25,7 +22,7 @@
     padding: 20px;
     background-color: #FF00FF;
     border-radius: 5px;
-    display: inline-block;
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     margin: 10px;
