--- a/public/assets/stylelayout.css
+++ b/public/assets/stylelayout.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"); /*Importar a fonte Roboto*/
+@import "https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css"; /*Importar as propriedades do framework CSS Bulma*/
+
+/* Definir as propriedades globais da estilização*/
 * {
     width: 100%;
+    font-family: 'Roboto' sans-serif;
 }
 
 .header, .footer {
@@ -17,7 +22,6 @@
 }
 
 .coluna {
-    width: 5%;
     float: left;
     padding: 20px;
     background-color: #FF00FF;
