Ajuste de Margem

--- a/public/assets/stylelayout.css
+++ b/public/assets/stylelayout.css
@@ -18,6 +18,10 @@
     margin: 50px 20px 50px 20px;
 }
 
+#dados_autor {
+    margin-top: 10px;
+}
+
 .article {
     width: 60%;
     margin: 50px;
