Ajuste de cor do Titulo

--- a/public/assets/stylelayout.css
+++ b/public/assets/stylelayout.css
@@ -11,6 +11,11 @@
     height: 15%;
     background-color: #333333;
     color: #FFFFFF;
+    text-align: center;
+}
+
+.title {
+    color: #FFFFFF;
 }
 
 .container {
